--- a/YURent/appsettings.json
+++ b/YURent/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB; Database=yurent; User ID =DESKTOP-3R2CMPJ\rodri; Password = ;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
