--- a/YURent/appsettings.json
+++ b/YURent/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB; Database=yurent; User ID =DESKTOP-3R2CMPJ\rodri; Password = ;"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=YURent; Trusted_Connection=true;"
   },
   "Logging": {
     "LogLevel": {
