--- a/YURent/appsettings.json
+++ b/YURent/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=YURent; Trusted_Connection=true;"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=YURent; Trusted_Connection=true;"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
