Database SQL Test

--- a/YURent/appsettings.json
+++ b/YURent/appsettings.json
@@ -1,6 +1,6 @@
 {
   //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=YURent; Trusted_Connection=true;"
+  //  "DefaultConnection": "server = sql211.epizy.com; uid = epiz_25958578; database = epiz_25958578_yurent; pwd = DjNtg0yPh6rvx5;"
   //},
   "Logging": {
     "LogLevel": {
